cxdzcz Files modified - [Main,index.html]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -31,6 +31,7 @@
                 </wm-liveform>
             </wm-livetable>
             <wm-label padding="unset 0.5em" name="label1" caption="bind:Variables.dmsService.dataSet"></wm-label>
+            <wm-label padding="unset 0.5em" name="label2"></wm-label>
         </wm-page-content>
     </wm-content>
     <wm-footer name="footer" content="footer"></wm-footer>
